--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
   "bugs": {
     "url": "https://github.com/jprichardson/minpatch/issues"
   },
-  "homepage": "https://github.com/jprichardson/minpatch#readme"
+  "homepage": "https://github.com/jprichardson/minpatch#readme",
+  "dependencies": {
+    "clone": "^1.0.2"
+  }
 }
